--- a/INSTALL
+++ b/INSTALL
@@ -1,9 +1,9 @@
-Building DogeCoin
+Building KittehCoin
 
-See doc/readme-qt.rst for instructions on building DogeCoin-QT,
+See doc/readme-qt.rst for instructions on building KittehCoin-QT,
 the intended-for-end-users, nice-graphical-interface, reference
-implementation of DogeCoin.
+implementation of KittehCoin.
 
-See doc/build-*.txt for instructions on building dogecoind,
+See doc/build-*.txt for instructions on building kittehcoind,
 the intended-for-services, no-graphical-interface, reference
-implementation of DogeCoin.
+implementation of KittehCoin.
